--- a/package.json
+++ b/package.json
@@ -11,15 +11,21 @@
   "author": "Nontawat Nganiam",
   "license": "MIT",
   "devDependencies": {
+    "@types/config": "0.0.39",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/express-validator": "^3.0.0",
     "@types/node": "^16.11.0",
     "nodemon": "^2.0.13",
     "ts-node": "^10.3.0",
     "typescript": "^4.4.4"
   },
   "dependencies": {
+    "@types/axios": "^0.14.0",
+    "axios": "^0.23.0",
+    "config": "^3.3.6",
     "cors": "^2.8.5",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "express-validator": "^6.13.0"
   }
 }
