--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "typescript": "^4.4.4"
   },
   "dependencies": {
-    "24game-solver": "^1.0.1",
+    "24points": "^1.0.0",
     "@types/axios": "^0.14.0",
     "axios": "^0.23.0",
     "config": "^3.3.6",
